# srt-sync

./: .gitignore  LICENSE  meson.build
include/srt-sync/: Client.hpp  DataTypes.hpp  Decode.hpp  Pipeline.hpp  Thread.hpp
src/: Client.cpp  Decode.cpp  Thread.cpp  main.cpp
subprojects/: libsrt.wrap
